# dummy-server

./: CMakeLists.txt  README.md
src/: main.cpp  modulemanagercontroller.cpp
